--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,8 +7,9 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio Web Cool</h1>
+    <h1>Sitio Web Cool</h1>x
     <p>Saludos Gente!</p>
+    <h2>Un gusto!</h2>
     <p> Por favor cuenteme que te parecio </p>
 </body>
 </html>
